WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157463
Correct dictionary bindings handling of optional, null, and undefined
https://bugs.webkit.org/show_bug.cgi?id=157463
Summary
Correct dictionary bindings handling of optional, null, and undefined
Darin Adler
Reported
2016-05-08 08:35:52 PDT
Correct dictionary bindings handling of optional, null, and undefined
Attachments
Patch
(31.04 KB, patch)
2016-05-08 08:42 PDT
,
Darin Adler
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2016-05-08 08:42:58 PDT
Created
attachment 278362
[details]
Patch
Darin Adler
Comment 2
2016-05-08 08:44:11 PDT
Chris, here is that change you requested. We now match the latest Web IDL rather than the older draft for handling of null, undefined, non-objects, and regular expressions converted to dictionaries, and we understand that special rule about optional dictionaries too.
Chris Dumez
Comment 3
2016-05-08 09:52:06 PDT
Comment on
attachment 278362
[details]
Patch r=me
Darin Adler
Comment 4
2016-05-08 09:53:26 PDT
Committed
r200555
: <
http://trac.webkit.org/changeset/200555
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug